Make DefaultUpdatesManager extendable and replace constants with Option object